force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Answer_4__c.field-meta.xml
<CustomField>
    <fullName>Answer_4__c</fullName>
    <label>Answer 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>