force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Answer_Index_7__c.field-meta.xml
<CustomField>
    <fullName>Answer_Index_7__c</fullName>
    <label>Answer Index 7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>