force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Answer_Index_Formula_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_Index_Formula_1__c</fullName>
    <description>to mapping answer index</description>
    <formula>CASE( Answer_1__c , 
&quot;0&quot;, &quot;1&quot;, 
&quot;1&quot;, &quot;1&quot;,
&quot;2&quot;, &quot;1&quot;,
&quot;3&quot;, &quot;1&quot;,
&quot;4&quot;, &quot;2&quot;,
&quot;5&quot;, &quot;2&quot;,
&quot;6&quot;, &quot;2&quot;,
&quot;7&quot;, &quot;3&quot;,
&quot;8&quot;, &quot;3&quot;,
&quot;9&quot;, &quot;4&quot;,
&quot;10&quot;, &quot;5&quot;,
&quot;0&quot;)</formula>
    <label>Answer Index Formula 1</label>
    <type>Text</type>
</CustomField>