force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/caId__c.field-meta.xml
<CustomField>
    <fullName>caId__c</fullName>
    <label>caId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>