force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Qualtrics Responses</relationshipLabel>
    <relationshipName>Survey_Qualtrics_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>