force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/cId__c.field-meta.xml
<CustomField>
    <fullName>cId__c</fullName>
    <label>cId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>