force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Qualtrics Responses</relationshipLabel>
    <relationshipName>Survey_Qualtrics_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>