force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/eId__c.field-meta.xml
<CustomField>
    <fullName>eId__c</fullName>
    <label>eId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>