force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Email_SMS_Log__c.field-meta.xml
<CustomField>
    <fullName>Email_SMS_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email &amp; SMS Log</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>Survey Qualtrics Responses</relationshipLabel>
    <relationshipName>Survey_Qualtrics_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>