force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/ICF_Non_CCC__c.field-meta.xml
<CustomField>
    <fullName>ICF_Non_CCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICF Non CCC</label>
    <referenceTo>ICF_Non_CCC__c</referenceTo>
    <relationshipLabel>Survey Qualtrics Responses</relationshipLabel>
    <relationshipName>Survey_Qualtrics_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>