force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Negative_Question__c.field-meta.xml
<CustomField>
    <fullName>Negative_Question__c</fullName>
    <label>Negative Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>