force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/nonId__c.field-meta.xml
<CustomField>
    <fullName>nonId__c</fullName>
    <label>nonId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>