force-app/main/default/objects/Survey_Qualtrics_Response__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Survey Qualtrics Responses</relationshipLabel>
    <relationshipName>Survey_Qualtrics_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>